--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -129,7 +129,7 @@ jobs:
           chmod +x ./gradlew
           ./gradlew assembleRelease \
             -Pcpuarch="${{ matrix.arch }}" \
-            -Pcmake_args="-DGIT_HASH=$GIT_HASH -DGIT_BRANCH=$GIT_BRANCH" \
+            -Pcmake_args="-DGIT_HASH=$GIT_HASH;-DGIT_BRANCH=$GIT_BRANCH" \
             --info
 
       - name: Rename APK
