--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -196,7 +196,7 @@ jobs:
           path: "mk/android/app/build/outputs/apk/release/SuperTux-${{ env.SUPERTUX_VERSION }}-${{ matrix.arch }}.apk"
 
       - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/') && matrix.release
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
           files: "mk/android/app/build/outputs/apk/release/SuperTux-*.apk"
