--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -199,6 +199,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
-          files: "mk/android/app/build/outputs/apk/release/SuperTux-*.apk"
+          files: "mk/android/app/build/outputs/apk/release/SuperTux-${{ env.SUPERTUX_VERSION }}-${{ matrix.arch }}.apk"
           draft: true
           token: ${{ secrets.GITHUB_TOKEN }}
