--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -142,11 +142,9 @@ jobs:
           fi
 
           cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE $CMAKE_ARCH_FLAGS             \
-                   -DENABLE_DISCORD=ON -DCMAKE_INSTALL_MESSAGE=NEVER           \
-                   -DSUPERTUX_PACKAGE_VERSION="$GIT_TAG dev - $GIT_HASH ($GIT_BRANCH) (CI ARTIFACT)" \
-                   -DSUPERTUX_VERSION_STRING="$GIT_BRANCH-$GIT_HASH"           \
-                   -DCMAKE_INSTALL_PREFIX=/usr -DINSTALL_SUBDIR_BIN=bin        \
-                   -DINSTALL_SUBDIR_SHARE=share/supertux2                      \
+                   -DGIT_HASH="$GIT_HASH" -DGIT_BRANCH="$GIT_BRANCH"            \
+                   -DCMAKE_INSTALL_PREFIX=/usr -DINSTALL_SUBDIR_BIN=bin         \
+                   -DINSTALL_SUBDIR_SHARE=share/supertux2                       \
                    -DCMAKE_POLICY_VERSION_MINIMUM=3.5
 
       - name: Build and install
@@ -197,7 +195,7 @@ jobs:
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
       - name: Prepare Release
-        if: startsWith(github.ref, 'refs/tags/') && matrix.release && github.repository_owner == 'supertux'
+        if: startsWith(github.ref, 'refs/tags/') && matrix.release
         env:
           BUILD_ARCH: ${{ matrix.arch }}
         run: |
@@ -208,7 +206,7 @@ jobs:
           fi
 
       - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/') && matrix.release && github.repository_owner == 'supertux'
+        if: startsWith(github.ref, 'refs/tags/') && matrix.release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
