--- a/mk/android/app/build.gradle
+++ b/mk/android/app/build.gradle
@@ -51,6 +51,7 @@ android {
                           "-Wno-dev"
                 abiFilters rootProject.ext.cpuarch as String[]
             }
+            android.defaultConfig.externalNativeBuild.cmake.arguments.addAll(rootProject.ext.cmake_args)
         }
     }
     buildTypes {
