--- a/tools/darwin/info.plist.in
+++ b/tools/darwin/info.plist.in
@@ -28,5 +28,9 @@
 	<string>NSApplication</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright 2002-2021 The SuperTux Team and contributors</string>
+	<key>LSArchitecturePriority</key>
+	<array>
+		<string>${INFOPLIST_LSARCHITECTURE}</string>
+	</array>
 </dict>
 </plist>
