Update macOS runner version in workflow

--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -36,7 +36,7 @@ jobs:
         # FreeBSD does not have glbinding
         # glbiactions/checkout@v4
 
-    runs-on: macos-14
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
         with:
