--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -66,7 +66,7 @@ jobs:
             pkg install -y curl
             pkg install -y libogg
             pkg install -y libvorbis
-            pkg install -y freetype
+            pkg install -y freetype2
             pkg install -y libraqm
             pkg install -y glm
             pkg install -y physfs
