Add libraqm package installation in bsd.yml
Add installation of libraqm package for FreeBSD builds.

--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -73,6 +73,7 @@ jobs:
             pkg install -y libfmt
             pkg install -y fribidi
             pkg install -y harfbuzz
+            pkg install -y libraqm
 
       - name: Build in FreeBSD
         if: ${{ matrix.vm_os == 'freebsd' }}
