Enable Discord support in CMake configuration

--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -84,7 +84,7 @@ jobs:
         run: |
             cd $GITHUB_WORKSPACE
             mkdir build && cd build
-            cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DWARNINGS=ON -DWERROR=OFF -DBUILD_TESTS=ON -DINSTALL_SUBDIR_SHARE=share/supertux2 -DCMAKE_INSTALL_MESSAGE=NEVER -DCMAKE_INSTALL_PREFIX=/usr -DINSTALL_SUBDIR_BIN=bin
+            cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DWARNINGS=ON -DWERROR=OFF -DBUILD_TESTS=ON -DINSTALL_SUBDIR_SHARE=share/supertux2 -DCMAKE_INSTALL_MESSAGE=NEVER -DCMAKE_INSTALL_PREFIX=/usr -DINSTALL_SUBDIR_BIN=bin -DENABLE_DISCORD=ON
             ls
             make -j3 VERBOSE=1
             make install DESTDIR="/tmp/supertux" VERBOSE=1
