--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -33,7 +33,7 @@ jobs:
         # TODO: Add the OpenBSD, NetBSD and Solaris VMs whenever possible
         vm_os: [freebsd]
         build_type: [Debug, Release]
-        arch: x86_64
+        arch: amd64
 
     runs-on: ubuntu-latest
     steps:
