--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -98,6 +98,7 @@ jobs:
             echo '#!/bin/sh' > run.sh
             echo './bin/supertux2' >> run.sh
             chmod +x run.sh
+            sleep 5
             tar -czvf SuperTux-FreeBSD.tar.gz ./
             cd ../../
             mkdir upload
