try fix  Error: Config not found: /home/runner/work/_actions/vmactions/freebsd-vm/v1.3.4/conf/15.conf

--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -33,7 +33,7 @@ jobs:
       matrix:
         vm_os: [freebsd]
         build_type: [Debug, Release]
-        freebsd_release: [15.0, 14.3]
+        freebsd_release: ["15.0", "14.3"]
 
     runs-on: ubuntu-latest
     steps:
