--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -65,6 +65,7 @@ jobs:
         shell: freebsd {0}
         run: |
             cd $GITHUB_WORKSPACE
+            git config --global --add safe.directory ./
             mkdir build && cd build
             cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DWARNINGS=ON -DWERROR=OFF -DINSTALL_SUBDIR_SHARE=share/supertux2 -DCMAKE_INSTALL_MESSAGE=NEVER -DCMAKE_INSTALL_PREFIX=/usr -DINSTALL_SUBDIR_BIN=bin -DENABLE_DISCORD=ON
             ls
