--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -99,8 +99,7 @@ jobs:
           if-no-files-found: ignore
 
       - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/') && matrix.release
-        if: ${{ matrix.build_type == 'Release' }}
+        if: startsWith(github.ref, 'refs/tags/') && matrix.release && ${{ matrix.build_type == 'Release' }}
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
