--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Start VM
         id: vm
-        uses: vmactions/freebsd-vm@v1.3.5
+        uses: vmactions/freebsd-vm@v1.3.6
         with:
           sync: rsync
           release: "${{ matrix.freebsd_release }}"
@@ -81,6 +81,7 @@ jobs:
         env:
           BUILD_TYPE: ${{ matrix.build_type }}
           freebsd_release: ${{ matrix.freebsd_release }}
+        shell: freebsd {0}
         run: |
             cd $GITHUB_WORKSPACE
             cd build
