Install boost optional and use it in crusher.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -369,6 +369,19 @@ if(WIN32)
   include(SuperTux/Win32)
 endif()
 
+# On OSX prior to 10.15 we need to use the experimental filesystem header
+if(CMAKE_OSX_DEPLOYMENT_TARGET AND CMAKE_OSX_DEPLOYMENT_TARGET VERSION_LESS "10.15")
+  message(STATUS "Using boost optional for deployment target ${CMAKE_OSX_DEPLOYMENT_TARGET}")
+  find_package(Boost COMPONENTS optional REQUIRED)
+  if (Boost_FOUND)
+    target_compile_definitions(supertux2 PRIVATE SUPERTUX_USE_BOOST_LIBRARIES)
+    target_include_directories(supertux2 PRIVATE ${Boost_INCLUDE_DIRS})
+    target_link_libraries(supertux2 PRIVATE ${Boost_LIBRARIES})
+  else()
+    message(FATAL_ERROR "Boost not found. CMAKE_OSX_DEPLOYMENT_TARGET is set to ${CMAKE_OSX_DEPLOYMENT_TARGET}, which requires Boost.Optional.")
+  endif()
+endif()
+
 if(EMSCRIPTEN)
   target_link_options(supertux2 PUBLIC -sEXPORTED_FUNCTIONS=['_main','_set_resolution','_save_config','_onDownloadProgress','_onDownloadFinished','_onDownloadError','_onDownloadAborted','_getExceptionMessage'] PUBLIC -sEXPORTED_RUNTIME_METHODS=['ccall','cwrap'])
 endif()
