set release = on

--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -34,6 +34,8 @@ jobs:
         vm_os: [freebsd]
         build_type: [Debug, Release]
         freebsd_release: ["15.0", "14.3"]
+        include:
+          - release: ON
 
     runs-on: ubuntu-latest
     steps:
