--- a/supertux2.desktop.in
+++ b/supertux2.desktop.in
@@ -36,6 +36,7 @@ Comment[nn]=Eit klassisk todimensjonalt plattformspel.
 Comment[sv]=Ett klassiskt tvådimensionellt plattformsspel
 Comment[pt]=Joga este clássico de plataformas 2D
 Comment[pt_BR]=Encarne o pinguin Tux neste jogo inspirado em clássicos de Pular&Correr
+Comment[ru]=Играть в классическую двухмерную платформенную игру
 Comment[hu]=Egy klasszikus 2D-s oldalnézeti játék
 Icon=@LINUX_DESKTOP_ICON@
 StartupWMClass=supertux2
