--- a/mk/android/build.gradle
+++ b/mk/android/build.gradle
@@ -33,6 +33,6 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+tasks.register('clean', Delete) {
+    delete rootProject.buildTreePath
 }
