flatpak: Enable OpenGL support
I really want to love flatpak but it has absolutely no dependency
management. This is irritating as hell, and the only way i managed to rule this
dependency out was to look at glew.pc to see the Depends: section. As a result
pkg-config was just ignoring it. Rubbish.

Signed-off-by: Swagtoy <me@ow.swag.toys>

--- a/org.supertux.SuperTuxNightly.yml
+++ b/org.supertux.SuperTuxNightly.yml
@@ -16,6 +16,7 @@ finish-args:
 modules:
   - external/shared-modules/SDL2/SDL2_image.json
   - external/shared-modules/physfs/physfs.json
+  - external/shared-modules/glu/glu-9.json
   - external/shared-modules/glew/glew.json
   - name: glm
     buildsystem: cmake
@@ -31,7 +32,6 @@ modules:
       - -DINSTALL_SUBDIR_SHARE=share/supertux2
       - -DINSTALL_SUBDIR_BIN=bin
       - -DCMAKE_BUILD_TYPE=RelWithDebInfo
-      - -DENABLE_OPENGL=OFF # Need to hack around glew issues
     sources:
       - type:   git
         url:    https://github.com/SuperTux/supertux.git
